chore(text-fields): update note about date fields

--- a/src/content/docs/guides/fields/text-fields.mdx
+++ b/src/content/docs/guides/fields/text-fields.mdx
@@ -69,7 +69,7 @@ The other types have their own composables. Check out the following guides:
 
 - Number field: see the [Number Field](/guides/fields/number-fields/) guide.
 - Search field: see the [Search Field](/guides/fields/search-fields/) guide.
-- No support for `date` fields at the moment.
+- Date field: see the [Date Field](/guides/fields/date-fields/) guide.
 
 </Aside>
 
