feat: new vidos batch-1

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -15,7 +15,7 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Text Fields"
     description="Allows users to enter plain text."
     link="/guides/fields/text-fields/"
-    src="/thumbs/text.mp4"
+    src="/thumbs/textbox.mp4"
   />
   <PreviewCard
     client:idle
@@ -50,7 +50,7 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Checkboxes"
     description="Allows users to select one or more items from a group of options."
     link="/guides/fields/checkboxes/"
-    src="/thumbs/checkboxes.mp4"
+    src="/thumbs/checkbox.mp4"
   />
   <PreviewCard
     client:idle
