docs: update touched definition

--- a/src/content/docs/guides/forms/validation.mdx
+++ b/src/content/docs/guides/forms/validation.mdx
@@ -155,7 +155,8 @@ All Formwerk components expose a few properties that can help you with error dis
 
 - `errors`: An array of all error messages if the field is invalid.
 - `errorMessage`: The error message if the field is invalid. Always the first element of the `errors` array.
-- `isTouched`: A boolean indicating if the field has been interacted with (blurred).
+- `isTouched`: A boolean indicating if the field has been interacted with.
+- `isBlurred`: A boolean indicating if the field has been blurred.
 - `isValid`: A boolean indicating if the field is valid.
 - `isDirty`: A boolean indicating if the field's value has changed.
 
