--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -15,7 +15,7 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Text Fields"
     description="Allows users to enter plain text."
     link="/guides/fields/text-fields/"
-    src="/thumbs/textbox.mp4"
+    src="/thumbs/text.mp4"
   />
   <PreviewCard
     client:idle
@@ -36,7 +36,7 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Switches"
     description="Allows users to toggle between two states."
     link="/guides/fields/switches/"
-    src="/thumbs/switch.mp4"
+    src="/thumbs/toggle.mp4"
   />
   <PreviewCard
     client:idle
@@ -50,14 +50,14 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Checkboxes"
     description="Allows users to select one or more items from a group of options."
     link="/guides/fields/checkboxes/"
-    src="/thumbs/checkbox.mp4"
+    src="/thumbs/checkboxes.mp4"
   />
   <PreviewCard
     client:idle
     title="Select Fields"
     description="Allows users to display a collapsible list of options that they can search and select one or more items from."
     link="/guides/fields/selects/"
-    src="/thumbs/select.mp4"
+    src="/thumbs/dropdown.mp4"
   />
   <PreviewCard
     client:idle
@@ -85,21 +85,21 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Date Fields"
     description="Allows users to enter a date."
     link="/guides/fields/date-fields/"
-    src="/thumbs/date.mp4"
+    src="/thumbs/datefields.mp4"
   />
   <PreviewCard
     client:idle
     title="Time Fields"
     description="Allows users to enter a time."
     link="/guides/fields/time-fields/"
-    src="/thumbs/time.mp4"
+    src="/thumbs/timefields.mp4"
   />
   <PreviewCard
     client:idle
     title="File Fields"
     description="Allows users to upload files."
     link="/guides/fields/file-fields/"
-    src="/thumbs/file.mp4"
+    src="/thumbs/fileupload.mp4"
   />
   <PreviewCard
     client:idle
@@ -120,18 +120,8 @@ Each of these composables helps you build a high-quality and accessible form con
     title="Custom Fields"
     description="Useful for creating unconventional form controls, or wrapping 3rd party components."
     link="/guides/fields/custom-fields/"
-    src="/thumbs/custom.mp4"
-  >
-    <div class="flex h-full w-full items-center justify-center bg-zinc-700">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="size-20 fill-current text-emerald-500"
-        viewBox="0 0 256 256"
-      >
-        <path d="M218.29,182.17a12,12,0,0,1-16.47,4.12L140,149.19V216a12,12,0,0,1-24,0V149.19l-61.82,37.1a12,12,0,1,1-12.35-20.58L104.68,128,41.83,90.29A12,12,0,1,1,54.18,69.71L116,106.81V40a12,12,0,0,1,24,0v66.81l61.82-37.1a12,12,0,1,1,12.35,20.58L151.32,128l62.85,37.71A12,12,0,0,1,218.29,182.17Z"></path>
-      </svg>
-    </div>
-  </PreviewCard>
+    src="/thumbs/customfields.mp4"
+  />
 </div>
 
 ## Forms
@@ -144,27 +134,27 @@ These composables help you build and organize form components with a laser focus
     title="Forms"
     description="Allows users to validate and submit data to the server."
     link="/guides/forms/"
-    src="/thumbs/form.mp4"
+    src="/thumbs/forms.mp4"
   />
   <PreviewCard
     client:idle
     title="Form Groups"
     description="Allows users to group related fields together."
     link="/guides/forms/form-groups/"
-    src="/thumbs/form-group.mp4"
+    src="/thumbs/formgroups.mp4"
   />
   <PreviewCard
     client:idle
     title="Form Repeaters"
     description="Allows users to group related fields together."
     link="/guides/forms/form-repeater/"
-    src="/thumbs/form-repeater.mp4"
+    src="/thumbs/formrepeater.mp4"
   />
   <PreviewCard
     client:idle
     title="Stepped Form Flow"
     description="Allows users to navigate through a form in a linear or non-linear way divided into steps."
     link="/guides/forms/stepped-form-flow/"
-    src="/thumbs/stepped-form-flow.mp4"
+    src="/thumbs/steppedform.mp4"
   />
 </div>
