Change import to use 'type' for TextFieldProps

--- a/src/content/docs/guides/getting-started.mdx
+++ b/src/content/docs/guides/getting-started.mdx
@@ -59,7 +59,7 @@ This library aims to offer an uncompromising new baseline of accessibility, inte
 
     ```vue title="TextField.vue"
     <script setup lang="ts">
-    import { TextFieldProps, useTextField } from '@formwerk/core';
+    import { type TextFieldProps, useTextField } from '@formwerk/core';
 
     const props = defineProps<TextFieldProps>();
 
