docs: added note on isValidated

--- a/src/content/docs/guides/forms/validation.mdx
+++ b/src/content/docs/guides/forms/validation.mdx
@@ -158,6 +158,7 @@ All Formwerk components expose a few properties that can help you with error dis
 - `isTouched`: A boolean indicating if the field has been interacted with.
 - `isBlurred`: A boolean indicating if the field has been blurred.
 - `isValid`: A boolean indicating if the field is valid.
+- `isValidated`: A boolean indicating if the field has been validated once due to user interaction.
 - `isDirty`: A boolean indicating if the field's value has changed.
 
 Given these properties, you can mix between them to produce the desired behavior.
