--- a/src/content/docs/guides/forms/index.mdx
+++ b/src/content/docs/guides/forms/index.mdx
@@ -982,7 +982,7 @@ function onResetClick() {
 
 Notice that even though we called reset, the errors are still displayed. By default, reset re-validates the form afterward. This is to ensure that the validation state of the fields matches their actual validity.
 
-You should consider using `isTouched` to show errors only when the field has been interacted with, which would eliminate this caveat. Alternatively, you can disable this behavior by passing `revalidate: false` to the `reset` function.
+You should consider using `isTouched` or `isValidated` to show errors only when the field has been interacted with, which would eliminate this caveat. Alternatively, you can disable this behavior by passing `revalidate: false` to the `reset` function.
 
 ```ts
 import { useForm } from '@formwerk/core';
